syntax = "proto3";

option csharp_namespace = "Proto.Command.Notes";


import "google/protobuf/timestamp.proto";

service NoteCommandProtoService {
  rpc CreateNote (CreateNoteCommandProto) returns (CommandResponse);
  rpc UpdateNote (UpdateNoteCommandProto) returns (CommandResponse);
}

message CreateNoteCommandProto {
  string noteId = 1;
  string text = 2;
  string noteTypeId = 3;
  string timeSlotId = 4;
  google.protobuf.Timestamp timeStamp = 5;
}

message UpdateNoteCommandProto {
  string noteId = 1;
  string text = 2;
  string noteTypeId = 3;
  string timeSlotId = 4;
}

message CommandResponse {
  bool success = 1;
}
