syntax = "proto3";

option csharp_namespace = "Proto.Notifications.Note";

service NotificationService {
  rpc SendNoteCreated(NoteCreatedNotification) returns (NotificationResponse);
  rpc SendNoteUpdated(NoteUpdatedNotification) returns (NotificationResponse);
}

service NoteNotificationService {
  rpc SubscribeNoteNotifications(SubscribeRequest) returns (stream NoteNotification);
}

message NoteNotification {
  oneof notification {
    NoteCreatedNotification noteCreated = 1;
    NoteUpdatedNotification noteUpdated = 2;
  }
}

message SubscribeRequest {
  // ggf. Filter, UserId etc.
}
message NoteCreatedNotification {
  string noteId = 1;
  string text = 2;
  string noteTypeId = 3;
  string timeSlotId = 4;
  string timeStamp = 5; // ISO 8601
}

message NoteUpdatedNotification {
  string noteId = 1;
  string text = 2;
  string noteTypeId = 3;
  string timeSlotId = 4;
}

message NotificationResponse {
  bool success = 1;
}
